--- a/03. Codigos/backend/package.json
+++ b/03. Codigos/backend/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "backend",
+  "name": "sistema-de-moeda-estudantil",
   "version": "1.0.0",
-  "description": "Backend do Sistema de Moeda Estudantil",
-  "main": "src/server.js",
+  "description": "O Sistema de Moeda Estudantil tem como objetivo reconhecer e valorizar o mérito dos alunos por meio de uma moeda virtual. Professores recebem um saldo de moedas a cada semestre e podem distribuí-las aos alunos como forma de incentivo por desempenho, comportamento e participação. Os alunos podem acumular essas moedas e trocá-las por benefícios em empresas parceiras, como descontos em restaurantes, mensalidades ou materiais. O sistema permite cadastro de alunos, professores e empresas, controle de saldo e extrato de transações, além do envio de notificações e cupons por e-mail.",
   "type": "module",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "node --watch src/server.js"
-  },
+  "start": "node ./src/server.js",
+  "dev": "node --watch ./src/server.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
+  "keywords": ["express", "node", "api", "moeda-estudantil"],
+  "author": "Paloma Dias de Carvalho",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mysql2": "^3.10.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.15.2"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
